--- a/backend/package.json
+++ b/backend/package.json
@@ -9,32 +9,45 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.16.0",
     "@neondatabase/serverless": "^0.10.4",
     "@notionhq/client": "^3.0.1",
+    "@supabase/supabase-js": "^2.50.0",
+    "@types/mongoose": "^5.11.96",
+    "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "memorystore": "^1.6.7",
+    "mongoose": "^8.15.1",
     "openai": "^4.98.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "pdf-lib": "^1.17.1",
     "pg": "^8.16.0",
     "postgres": "^3.4.5",
+    "uuid": "^11.1.0",
+    "vite": "^6.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
-    "@types/express": "4.17.21",
-    "@types/express-session": "^1.18.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.2",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.13",
     "drizzle-kit": "^0.30.4",
     "tsx": "^4.19.1",
     "typescript": "5.6.3"
   }
-} 
+}
